<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Umpire Buddy v2</string>
    <string name="strike_tag">\u0020Strikes:\u0020</string>
    <string name="ball_tag">\u0020Balls:\u0020</string>
    <string name="totalOuts_tag">Total Outs:\u0020</string>
    <string name="strike_value">0</string>
    <string name="ball_value">0</string>
    <string name="totalOuts_value">0</string>
    <string name="strike_button">strike</string>
    <string name="ball_button">ball</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_about">About...</string>
    <string name="hello_world">Hello world!</string>
    <string name="about_text">This is UMPIRE BUDDY ver. 2.0 by Joel Schuman. created for a UMKC intro to Software Engineering course.</string>
    <string name="okay_button">OK</string>

</resources>
